--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cv-project",
-  "homepage": "https://ctang415.github.io/cv-application",
+  "homepage": "ctang415.github.io/cv-application",
+  "name": "cv-application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
