--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "ctang415.github.io/cv-application",
+  "homepage": "https://ctang415.github.io/cv-application",
   "name": "cv-application",
   "version": "0.1.0",
   "private": true,
